--- a/index.Rmd
+++ b/index.Rmd
@@ -8,37 +8,15 @@ date: "2024-10-18"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
-# Load Libraries
+# Load Libraries: 
 
-# library(pacman)
-# library(tidyquant)
-# library(tidyr)
-# library(dplyr)
-# library(gt)
-# library(DT)
-# library(formattable)
-# library(data.table)
-# library(gmodels)
-# library(stringr)
-# library(lubridate)
-# library(scales)
-# library(ggplot2)
-# library(GGally)
-# library(plotly)
-# library(DBI)
-# library(RSQLite)
-# library(googledrive)
-# library(googlesheets4)
-# library(janitor)
-# library(forecast)
-# library(tseries)
-# library(openxlsx)
-# library(RMySQL)
-# library(RSQLite)
-# library(DBI)
+library(pacman)
 
-```
+p_load("janitor","tibble","scales","lubridate","formattable",
+"data.table","stringr","DT","GGally","gt","openxlsx",
+"rvest","readr","readxl","tidyr","dplyr","RMySQL","RSQLite","GGally","DBI","googledrive","googlesheet4") 
+
+--------------------------------------------------------------------------------
 
 ## Connect
 
@@ -72,64 +50,60 @@ emp<-dbReadTable(conn = conn,"Employees")  |> clean_names() # Load From Database
 
 shp<-dbGetQuery(conn,"select * from Shippers") |> clean_names() |> select(c(1,2))
 
+--------------------------------------------------------------------------------
 
+## Joins 
 
-#Joins 
 hd<-order |> inner_join(cus,by="customer_id") |> 
-  inner_join(emp,by="employee_id") |> clean_names()
+inner_join(emp,by="employee_id") |> clean_names()
 
 od<-
-  item |> inner_join(cat,by="category_id") |> 
-  inner_join(od,by="product_id") |> mutate(sales=price*quantity) 
+item |> inner_join(cat,by="category_id") |> 
+inner_join(od,by="product_id") |> mutate(sales=price*quantity) 
 
 
 hd<-
-  od |> group_by(order_id) |> 
-  summarize(sales=sum(sales),qty=sum(quantity),
-            items=n()) |> inner_join(hd,by = "order_id") 
+od |> group_by(order_id) |> 
+summarize(sales=sum(sales),qty=sum(quantity),
+items=n()) |> inner_join(hd,by = "order_id") 
 
 
 hd<-
-  hd |> group_by(customer_name) |> summarize(sales=sum(sales),.groups = "drop") |> 
-  arrange(desc(sales))|>  mutate(pct=sales/sum(hd$sales),
-                                 class=case_when(pct>=0.04 ~ "A",pct>=0.01 ~ "B",pct>=0.005 ~ "C" ,TRUE~"D"))|> 
-  select(1,4)|>  inner_join(hd,by = "customer_name")  
-
+hd |> group_by(customer_name) |> summarize(sales=sum(sales),.groups = "drop") |> arrange(desc(sales))|>  mutate(pct=sales/sum(hd$sales),
+class=case_when(pct>=0.04 ~ "A",pct>=0.01 ~ "B",pct>=0.005 ~ "C" ,TRUE~"D"))|> 
+select(1,4)|>  inner_join(hd,by = "customer_name")  
 
 
 totals<-
-  stack(hd |> summarize(sales=sum(sales),qty=sum(qty),orders=n())) |> 
-  rename(Total=values)
+stack(hd |> summarize(sales=sum(sales),qty=sum(qty),orders=n())) |> 
+rename(Total=values)
 
+--------------------------------------------------------------------------------
 
-# Reports Tables
+## Reports Tables
 
 top10_customers<-
-  hd |> filter(customer_name %in% unlist(
-    hd |> group_by(customer_name) |>
-      summarize(sales=sum(sales),
-                .groups = "drop") |> 
-      arrange(desc(sales)) |> head(10) |> select(customer_name) 
-  ))|> 
-  mutate(order_date=as.Date(order_date),
-         months=month(order_date),years=year(order_date)) |> 
-  group_by(months,years=as.factor( years),
-           customer_name) |> 
-  summarize(sales=sum(sales),.groups = "drop")|>
-  pivot_wider(id_cols = c(customer_name,years),
-              names_from = months,values_from = sales,values_fill = F) |> 
-  arrange(years) |> adorn_totals("col")|> 
-  mutate(pct=percent(round( Total/sum(hd$sales),4)))|> 
-  adorn_totals("row") 
+hd |> filter(customer_name %in% unlist(
+hd |> group_by(customer_name) |>
+summarize(sales=sum(sales),
+.groups = "drop") |> 
+arrange(desc(sales)) |> head(10) |> select(customer_name) ))|> 
+mutate(order_date=as.Date(order_date),
+months=month(order_date),years=year(order_date)) |> 
+group_by(months,years=as.factor( years),
+customer_name) |> summarize(sales=sum(sales),.groups = "drop")|>
+pivot_wider(id_cols = c(customer_name,years),
+names_from = months,values_from = sales,values_fill = F) |> 
+arrange(years) |> adorn_totals("col")|> 
+mutate(pct=percent(round( Total/sum(hd$sales),4)))|> 
+adorn_totals("row") 
 
 
 top10_customers_countries<-
 hd |> group_by(country,customer_name,class) |> 
 summarize(sales=sum(sales),.groups = "drop") |>
 arrange(desc(sales)) |> head(10) |> pivot_wider(id_cols =c(customer_name,class) ,
-names_from =country ,values_from = sales,values_fill = FALSE) |> adorn_totals("col") |> 
-mutate(pct=percent(round( Total/sum(hd$sales),4))) |> adorn_totals("row")
-
+names_from =country ,values_from = sales,values_fill = FALSE) |> adorn_totals("col") |> mutate(pct=percent(round( Total/sum(hd$sales),4))) |> adorn_totals("row")
 
 
 top5_countries<-
@@ -142,10 +116,8 @@ hd |> mutate(order_date=as.Date(order_date),
 months=month(order_date),years=year(order_date)) |> 
 group_by(months,years=as.factor( years),emp=paste0(first_name," ",last_name)) |> 
 summarize(sales=sum(sales),.groups = "drop")|>
-pivot_wider(id_cols = c(emp,years),names_from = months,values_from = sales,values_fill = F) |> 
-arrange(years) |> adorn_totals("col")|> 
+pivot_wider(id_cols = c(emp,years),names_from = months,values_from = sales,values_fill = F) |> arrange(years) |> adorn_totals("col")|> 
 mutate(pct=percent(Total/sum(hd$sales)))|> adorn_totals("row")
-
 
 sales_emp_edu<-
 hd |> mutate(emp_name=paste(first_name,last_name,sep=" ")) |> 
@@ -155,7 +127,6 @@ notes %like% "economics" ~"economics",notes %like% "Peace C" ~"Peace Corps",
 notes %like% "chemi" ~"chemistry",TRUE ~ "other")) |> 
 group_by(edu) |> summarize(sales=sum(sales)) |> arrange(desc(sales)) 
 
-
 top10_items<-
 od |> group_by(category_name,product_name) |> 
 summarize(sales=sum(sales),.groups = "drop") |> 
@@ -163,20 +134,19 @@ mutate(pct=percent(round( sales/sum(sales),4)))|>
 arrange((category_name),desc(sales)) |> head(10) |> 
 adorn_totals("row")
 
-
 top5_countries_byEmp<- 
-  hd |> filter(country %in%  (top5_countries |> select(country)|> unlist() )) |> 
-  group_by(emp=paste(first_name,last_name,sep = " "),country)|>
-  summarize(sales=sum(sales)) |> 
-  pivot_table(.rows = ~emp,.columns = 
-                ~country,.values =~sales ,fill_na = F)|> 
-  adorn_totals("col")  |>  mutate(pct=percent(Total/sum(hd$sales))) |> 
-  arrange(desc(Total)) |> adorn_totals("row")
+hd |> filter(country %in%  (top5_countries |> select(country)|> unlist() )) |> 
+group_by(emp=paste(first_name,last_name,sep = " "),country)|>
+summarize(sales=sum(sales)) |> 
+pivot_table(.rows = ~emp,.columns = 
+~country,.values =~sales ,fill_na = F)|> 
+adorn_totals("col")  |>  mutate(pct=percent(Total/sum(hd$sales))) |> 
+arrange(desc(Total)) |> adorn_totals("row")
 
 
 top10_cities<-
-  hd |> group_by(country,city) |> 
-  summarize(sales=sum(sales)) |> arrange(desc(sales)) |> head(10) |> mutate(pct=percent(round(sales/sum(hd$sales),4)))
+hd |> group_by(country,city) |> 
+summarize(sales=sum(sales)) |> arrange(desc(sales)) |> head(10) |> mutate(pct=percent(round(sales/sum(hd$sales),4)))
 
 Totals_monthyears<-
 hd |> mutate(as.Date(order_date)) |> 
@@ -187,8 +157,6 @@ summarize(saless=sum(sales),order=n(),quantities=sum(qty),.groups = "drop") |>
 arrange(years) |> 
 mutate(pct=percent( saless/sum(hd$sales))) |> 
 adorn_totals("row")
-
-
 
 top10_countries_byshippers<-
 shp |> inner_join(hd,by="shipper_id") |> 
@@ -201,19 +169,19 @@ adorn_totals("col") |>
 mutate(pct=percent(round(Total/sum(hd$sales),4)) ) |>
 arrange(desc(Total)) |> head(10)
 
+--------------------------------------------------------------------------------
 
-# GSheet Reports Outputs
-
+## GSheet Reports Outputs
 
 gs4_auth()
  
 gs4_create(name = "Sales_MYSQL")
 
-
 gs4_find("Sales_MYSQL")
 
+--------------------------------------------------------------------------------
 
-# Delete Sheets 
+## Delete Sheets 
 
 gs4_find("Sales_MYSQL") |> 
 sheet_add(sheet = "base",.before = 1)
@@ -236,8 +204,9 @@ gs4_find("Sales_MYSQL") |>  sheet_delete(sheet = "countries")
 
 gs4_find("Sales_MYSQL") |>  sheet_delete(sheet = "Total_per_MY")
 
+--------------------------------------------------------------------------------
 
-# Create Report Sheets 
+## Create Report Sheets 
 
 gs4_find("Sales_MYSQL") |> 
   sheet_add(sheet = "employees") |> 
@@ -281,9 +250,9 @@ gs4_find("Sales_MYSQL") |>
 sheet_add(sheet = "countries_shippers") |> 
 sheet_write(sheet = "countries_shippers",data=top10_countries_byshippers)
 
+--------------------------------------------------------------------------------
 
-
-# Workbook Manage 
+## Workbook Manage 
 
 gs4_find("Sales_MYSQL") |> sheet_names()
 
@@ -292,27 +261,22 @@ gs4_find("Sales_MYSQL") |> sheet_delete(sheet = "Sheet1")
 gs4_find("Sales_MYSQL") |> sheet_rename(sheet = "base",new_name ="Base" )
 
 
+--------------------------------------------------------------------------------
 
 # Outputs
 
 lst<-
-  list("Total_per_MY"=Totals_monthyears,
-       "Cities"=top10_cities,"customers_my"=top10_customers,"Customers_countries"=top10_customers_countries,
-       "items"=top10_items,
-       "countries"=top5_countries,"countriesby_emp"= top5_countries_byEmp,
-       "emp_sales"=emp_sales)
-
+list("Total_per_MY"=Totals_monthyears,
+"Cities"=top10_cities,"customers_my"=top10_customers,"Customers_countries"=top10_custo
+ers_countries,"items"=top10_items,"countries"=top5_countries,"countriesby_emp"= top5_countries_byEmp,"emp_sales"=emp_sales)
 
 write.xlsx(lst,file = "reposrt.xlsx")
 
-
-dbWriteTable(conn = conn,name ="top_customers" ,
-value =tibble::as_tibble(top10_customers) )
- 
 gs4_find("Sales_MYSQL") |> sheet_names()
 
+--------------------------------------------------------------------------------
 
-# Upload Tables To DB
+## Upload Tables To DB
 
 dbWriteTable(conn = conn,name ="Sales_Edu" ,value = as_tibble(sales_emp_edu))
 
@@ -327,3 +291,11 @@ dbWriteTable(conn =conn ,name = "Sales_Totals",value =as_tibble(Totals_monthyear
 dbWriteTable(conn = conn,name = "top_countries_shippers",
 value =as_tibble(top10_countries_byshippers))
 
+dbWriteTable(conn = conn,name ="top_customers" ,
+value =tibble::as_tibble(top10_customers) )
+
+--------------------------------------------------------------------------------
+
+--------------------------------------------------------------------------------
+
+--------------------------------------------------------------------------------
